--- a/index.html
+++ b/index.html
@@ -2,56 +2,82 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Impressão 3D</title>
     <style>
-        /* CSS - O "look" da calculadora */
-        body { font-family: 'Segoe UI', sans-serif; background-color: #1a1a1a; color: white; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .card { background: #2d2d2d; padding: 2rem; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); width: 350px; }
-        h2 { text-align: center; color: #00ff88; margin-bottom: 1.5rem; }
-        .input-group { margin-bottom: 1rem; }
-        label { display: block; margin-bottom: 5px; font-size: 0.9rem; }
-        input { width: 100%; padding: 10px; border: none; border-radius: 5px; background: #3d3d3d; color: white; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; border: none; border-radius: 5px; background: #00ff88; color: #1a1a1a; font-weight: bold; cursor: pointer; transition: 0.3s; margin-top: 10px; }
-        button:hover { background: #00cc6e; }
-        .result { margin-top: 1.5rem; padding: 15px; background: #3d3d3d; border-radius: 5px; text-align: center; border-left: 5px solid #00ff88; }
-        .result span { font-size: 1.5rem; display: block; color: #00ff88; }
+        body { font-family: 'Segoe UI', sans-serif; background: #121212; color: white; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .card { background: #1e1e1e; padding: 25px; border-radius: 15px; width: 350px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); border: 1px solid #333; }
+        h2 { color: #00ffa2; text-align: center; margin-top: 0; }
+        .campo { margin-bottom: 15px; }
+        label { display: block; margin-bottom: 5px; color: #aaa; font-size: 14px; }
+        input { width: 100%; padding: 12px; border: 1px solid #444; border-radius: 8px; background: #252525; color: white; box-sizing: border-box; font-size: 16px; }
+        input:focus { border-color: #00ffa2; outline: none; }
+        button { width: 100%; padding: 15px; background: #00ffa2; border: none; border-radius: 8px; color: #000; font-weight: bold; font-size: 16px; cursor: pointer; transition: 0.2s; margin-top: 10px; }
+        button:hover { background: #00d688; transform: translateY(-2px); }
+        .res-box { margin-top: 20px; padding: 15px; background: #252525; border-radius: 8px; text-align: center; display: none; border-left: 4px solid #00ffa2; }
+        #valorFinal { font-size: 28px; color: #00ffa2; font-weight: bold; display: block; }
     </style>
 </head>
 <body>
 
 <div class="card">
-    <h2>Custo 3D</h2>
-    <form method="POST" id="calcForm">
-        <div class="input-group">
-            <label>Preço do Rolo (R$)</label>
-            <input type="number" step="0.01" name="preco_filamento" placeholder="Ex: 120.00" required>
-        </div>
-        <div class="input-group">
-            <label>Peso do Rolo (gramas)</label>
-            <input type="number" name="peso_rolo" value="1000" required>
-        </div>
-        <div class="input-group">
-            <label>Gramas Usadas no Print</label>
-            <input type="number" step="0.1" name="gramas_usadas" placeholder="Ex: 45.5" required>
-        </div>
-        <button type="submit">Calcular Custo</button>
-    </form>
-
-    {% if resultado %}
-    <div class="result">
-        <small>Custo Estimado:</small>
-        <span>R$ {{ resultado }}</span>
+    <h2>Custo do Filamento</h2>
+    
+    <div class="campo">
+        <label>Preço do Rolo (R$)</label>
+        <input type="text" id="preco" placeholder="Ex: 130,00" oninput="validar(this)">
     </div>
-    {% endif %}
+
+    <div class="campo">
+        <label>Peso do Rolo (gramas)</label>
+        <input type="number" id="pesoRolo" value="1000">
+    </div>
+
+    <div class="campo">
+        <label>Gramas que serão usadas (g)</label>
+        <input type="text" id="gramas" placeholder="Ex: 50,5" oninput="validar(this)">
+    </div>
+
+    <button type="button" onclick="calcular()">Calcular Custo</button>
+
+    <div id="resultadoBox" class="res-box">
+        <small style="color: #888;">Custo Estimado da Peça:</small>
+        <span id="valorFinal">R$ 0,00</span>
+    </div>
 </div>
 
 <script>
-    // JavaScript para um pequeno feedback visual ao clicar
-    const form = document.getElementById('calcForm');
-    form.addEventListener('submit', () => {
-        console.log("Calculando custos...");
-    });
+    // Função para permitir vírgula e ponto
+    function validar(input) {
+        input.value = input.value.replace(/[^0-9,.]/g, '');
+    }
+
+    function calcular() {
+        // Pegamos os valores e trocamos a vírgula por ponto para o PC entender
+        let preco = document.getElementById('preco').value.replace(',', '.');
+        let peso = document.getElementById('pesoRolo').value;
+        let gramas = document.getElementById('gramas').value.replace(',', '.');
+
+        // Converte para números reais
+        preco = parseFloat(preco);
+        peso = parseFloat(peso);
+        gramas = parseFloat(gramas);
+
+        // Verifica se os campos estão preenchidos corretamente
+        if (isNaN(preco) || isNaN(peso) || isNaN(gramas) || peso <= 0) {
+            alert("Por favor, preencha todos os campos com números válidos!");
+            return;
+        }
+
+        // CÁLCULO: (Preço / Peso do Rolo) * Gramas usadas
+        const resultado = (preco / peso) * gramas;
+
+        // Mostra o resultado na tela
+        const box = document.getElementById('resultadoBox');
+        const span = document.getElementById('valorFinal');
+        
+        span.innerText = "R$ " + resultado.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+        box.style.display = 'block';
+    }
 </script>
 
 </body>
